<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">Extensions</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="incall_vibration_category">Vibration options</string>
    <string name="incall_home_category">Home button options</string>
    <string name="incall_sensors_category">Sensors options</string>
    <string name="incall_record_category">Call recorder options</string>
    <string name="incall_bg_category">Incall background</string>
    <string name="nightmode_category">Nightmode options</string>
    <string name="gestures_category">Gestures</string>
    <string name="volume_panel_category">Volume panel options</string>
    <string name="music_category">Music</string>
    <string name="weather_category">Lockscreen weather</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="animations_category">Tile animations</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">Notifications panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="panels_category">Panels</string>
    <string name="breathing_notifications_category">Breathing Notifications</string>
    <string name="build_tweaks_summary_title">Extend your device!</string>
    <string name="system_animations">System animations</string>
    <string name="toast">Toast</string>
    <string name="listview">ListView</string>
    <string name="qs_header_title">Quick settings header</string>
    <string name="qs_omnijaws_category">Weather QS tile</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="weather_config_title">Service settings</string>
    <string name="weather_config_summary"></string>
    <string name="header_weather_title">Header view weather</string>
    <string name="header_weather_summary">Enable notification panel header weather display</string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Right edge of the statusbar pulls down Quick Settings</string>
    <string name="misc_extensions_title">Misc extensions</string>
    <string name="general_tweaks_title">General tweaks</string>
    <string name="incall_title">In-call options</string>
    <string name="volume_panel_title">Volume panel</string>
    <string name="volume_timeout_title">Volume dialog timeout</string>
    <string name="transparent_volume_dialog_title">Volume dialog transparency</string>
    <string name="volume_dialog_stroke_title">Volume dialog stroke</string>
    <string name="volume_dialog_stroke_disabled">Disabled</string>
    <string name="volume_dialog_stroke_accent">Accent color</string>
    <string name="volume_dialog_stroke_custom">Custom color</string>
    <string name="volume_dialog_stroke_color_title">Volume dialog stroke color</string>
    <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
    <string name="volume_dialog_corner_radius_title">Volume dialog corner radius</string>
    <string name="volume_dialog_dash_width_title">Volume dialog stroke dash width</string>
    <string name="volume_dialog_dash_gap_title">Volume dialog stroke dash gap</string>
    <string name="notifications_title">Notifications</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="lockscreen_shortcuts">Lockscreen shortcuts</string>
    <string name="buttons_title">Buttons</string>
    <string name="blur_title">Blur</string>
    <string name="animations_title">Animations</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double-tap on the statusbar or top third and bottom shortcut area of the lock screen to turn off the display</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="power_notification_controls_title">Power notification controls</string>
    <string name="power_notification_controls_summary">Select importance level for notifications</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="flashlight_notification_title">Flashlight notification</string>
    <string name="flashlight_notification_summary">Enable notification for when the flashlight is on</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
    <string name="media_scanner_on_boot_enabled">Scan media</string>
    <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
    <string name="media_scanner_on_boot_disabled">Do not scan media</string>
    <string name="volbtn_cursor_control_title">Volume key cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="button_wake_title">Wake up</string>
    <string name="home_wake_summary">Pressing the home button will wake your device</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Statusbar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="allow_incall_home_title">Home button when ringing</string>
    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
    <string name="ring_home_button_title">Answer call by Home button</string>
    <string name="ring_home_button_summary">Allow answer call by Home button when device is ringing</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_connect_time_title">Duration</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="incall_vibrate_disconnect_time_title">Duration</string>
    <string name="proximity_auto_speaker_title">Automatic proximity speakerphone</string>
    <string name="proximity_auto_speaker_summary">Enable speakerphone automatically when your phone is removed from your ear</string>
    <string name="proximity_auto_speaker_delay_title">Speakerphone delay</string>
    <string name="proximity_auto_speaker_incall_only_title">Only while in call</string>
    <string name="proximity_auto_speaker_incall_only_summary">On outgoing calls, listener will only become active after the receiving party answers</string>
</resources>