<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/volume_panel_title">

    <PreferenceCategory
        android:key="volume_panel_category"
        android:title="@string/volume_panel_category">

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="transparent_volume_dialog"
        android:title="@string/transparent_volume_dialog_title"
        settings:max="255"
        settings:min="0"
        settings:interval="1"
        settings:units=""
        android:persistent="false"/>

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="volume_dialog_timeout"
        android:title="@string/volume_timeout_title"
        settings:max="10000"
        settings:min="1000"
        settings:units="ms"
        settings:interval="500"
        android:persistent="false"/>

    <ListPreference
        android:key="volume_dialog_stroke"
        android:title="@string/volume_dialog_stroke_title"
        android:dialogTitle="@string/volume_dialog_stroke_title"
        android:entries="@array/volume_dialog_stroke_entries"
        android:entryValues="@array/volume_dialog_stroke_values"
        android:defaultValue="0" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="volume_dialog_stroke_color"
        android:title="@string/volume_dialog_stroke_color_title"
        android:defaultValue="0xffffffff" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="volume_dialog_stroke_thickness"
        android:title="@string/volume_dialog_stroke_thickness_title"
        settings:max="25"
        settings:min="1"
        settings:units="px"
        settings:defaultValue="4"
        android:persistent="false" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="volume_dialog_corner_radius"
        android:title="@string/volume_dialog_corner_radius_title"
        settings:max="50"
        settings:min="0"
        settings:units="px"
        settings:defaultValue="10"
        android:persistent="false" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="volume_dialog_dash_width"
        android:title="@string/volume_dialog_dash_width_title"
        settings:max="50"
        settings:min="0"
        settings:units="px"
        settings:defaultValue="0"
        android:persistent="false" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="volume_dialog_dash_gap"
        android:title="@string/volume_dialog_dash_gap_title"
        settings:max="50"
        settings:min="1"
        settings:units="px"
        settings:defaultValue="10"
        android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
